welcome.lessons.welcome.methods.picture.PictureMono2.scala.code
override def run() {
def faireMotif()
{

def dessiner()
{	baisseBrosse()
	leveBrosse()	}

def faireV()
	{avance()
	dessiner()
	avance()
	gauche()
	avance()
	dessiner()
	recule()
	droite()
	avance()
	dessiner()
	avance()
	gauche()}

for (i <- 1 to 4)
	{faireV}
}


def deplacement()
{for (i <- 1 to 5)
{avance()}
}

for (i <- 1 to 3)
	{for (i <- 1 to 3)
{faireMotif()
cavalier()}
gauche()
deplacement()
droite()
	}






}
